# cepx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/cepx/: __init__.py  _core.py  _types.py  _validation.py  errors.py
src/cepx/providers/: __init__.py  awesomeapi.py  base.py  brasilapi.py  correios.py  correios_alt.py  local.py  opencep.py  viacep.py  widenet.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/unit/: test_cepaberto_loader.py  test_core.py  test_local.py  test_providers.py  test_validation.py
tools/: bench_local.py  build_cep_db.py  fetch_cepaberto.py  load_cepaberto.py
