[project]
name = "cepx"
version = "0.1.0"
description = "Busca por CEP integrada aos serviços dos Correios, ViaCEP, WideNet e BrasilAPI (sync e async). Python port do cep-promise."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "cep",
    "correios",
    "zipcode",
    "viacep",
    "brasilapi",
    "widenet",
    "apicep",
]
dependencies = ["httpx[http2]>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cepx"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.22",
]

[tool.ruff]
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ty.environment]
python-version = "3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, fully mocked test (no network)",
    "e2e: end-to-end test that queries the live CEP providers (network)",
]
addopts = """
-m "not e2e" \
--cov=cepx \
--cov-report=term-missing \
--cov-fail-under=80
"""

[tool.coverage.run]
source = ["cepx"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100

exclude_also = [
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING",
]
