[project]
name = "cepx"
version = "0.1.2"
description = "Fast, offline-capable Brazilian CEP (postal code) lookup for Python, sync and async."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "cep",
    "correios",
    "zipcode",
    "viacep",
    "brasilapi",
    "widenet",
    "apicep",
    "opencep",
    "awesomeapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = ["httpx[http2]>=0.27"]

[project.optional-dependencies]
local = ["cepx-data>=0.1.2"]

[project.urls]
Homepage = "https://github.com/moc-guardian/cepx"
Repository = "https://github.com/moc-guardian/cepx"
Issues = "https://github.com/moc-guardian/cepx/issues"
Changelog = "https://github.com/moc-guardian/cepx/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cepx"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.22",
]

[tool.ruff]
line-length = 80
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ty.environment]
python-version = "3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast, fully mocked test (no network)",
    "e2e: end-to-end test that queries the live CEP providers (network)",
]
addopts = """
-m "not e2e" \
--cov=cepx \
--cov-report=term-missing \
--cov-fail-under=80
"""

[tool.coverage.run]
source = ["cepx"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100

exclude_also = [
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING",
]
